--- a/style.css
+++ b/style.css
@@ -7,10 +7,24 @@ body {
 
 header {
    font-size: 60px;
-   border-bottom: double 5px blue;
-   padding: 6px
+   padding: 6px;
    text-aling: center;
 }
 
 h1 {
-   font-size: 30px; 
+  font-size: 30px;
+  border-bottom: double 5px blue;
+  text-align: center; 
+}
+
+p {
+  font-size: 20px;
+  text-align: center;
+}
+
+iframe, vídeo {
+  display: block;
+  margin: O auto;
+  width: 80%;
+  max-width: 700px;
+}
